# media-downloader

./: .gitignore  =1.40  README.md  pyproject.toml
docs/: design.md  tasks.md
media_downloader/: __init__.py  ai_provider.py  cli.py  content_analyzer.py  download_manager.py  format_selector.py  models.py  orchestrator.py  output_resolver.py  post_processor.py  progress.py  quality_advisor.py  registry.py  resume.py
media_downloader/extractors/: __init__.py  ai_extractor.py  base.py  generic.py  web.py  web_js.py
media_downloader/tests/: test_ai_extractor.py  test_ai_provider.py  test_content_analyzer.py  test_format_selector.py  test_generic_extractor.py  test_orchestrator.py  test_post_processor.py  test_progress.py  test_quality_advisor.py  test_registry.py  test_resume.py  test_web_extractor.py  test_web_js_extractor.py
