[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.41.0"]
build-backend = "setuptools.build_meta"

[project]
name = "media-downloader"
version = "0.1.0"
description = "CLI tool and library for downloading video and audio from internet sources"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "httpx==0.27.2",
    "click==8.1.7",
    "ffmpeg-python==0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "hypothesis==6.112.2",
    "pytest-cov==5.0.0",
]

[project.scripts]
media-dl = "media_downloader.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["media_downloader*"]

[tool.pytest.ini_options]
testpaths = ["media_downloader/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
